@@ -1,5 +1,8 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.655 2006/08/11 02:07:19 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.656 2006/08/11 13:29:15 wolf31o2 Exp $
+
+  11 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/sparc.py:
+  The sparc32 binary is in /bin, not /usr/bin.
 
   11 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/chroot-functions.sh:
